# papyrus-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/utils/: database.cpp  database.h  logger.cpp  storage.cpp
